--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-    <title></title>
+    <title>HOME</title>
   </head>
   <body>
+
+    <button class="btn btn-primary">Ramon</button>
 
 
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
