--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,74 @@
     <title>HOME</title>
   </head>
   <body>
+    <header class="header">
+      <div class="header__logo">
+        <img src="" alt="logo">
+      </div>
 
-    <button class="btn btn-primary">Ramon</button>
+      <div class="header__menu">
+        <a class="header__menu-link" href="#">Members</a>
+        <a class="header__menu-link" href="#">Blog</a>
+        <a class="header__menu-link" href="#">Gallery</a>
+      </div>
+
+    </header>
+
+    <mai class="main__index">
+
+      <section class="index__container">
+
+        <img class="container__img" src="#">
+    
+        <h1 class="container__h1">JOIN US!</h1>
+        <h2 class="container__h2">TENNIS COMPETITION COMING SOON!</h2>
+
+        <button class="container__btn">READ MORE</button>
+        
+
+      </section>
+
+    </main>
+
+    <footer class="footer">
+      <div class="footer__contact">
+        <div class="contact__timetable">
+
+        </div>
+
+        <div class="contact__info">
+
+        </div>
+
+
+      </div>
+
+      <div class="footer__nav">
+        <div class="nav__logo">
+          <img src="#">
+
+        </div>
+
+        <div class="nav__menu">
+          <a class="nav__menu-link" href="#">HOME</a>
+          <a class="nav__menu-link" href="#">MEMBERS</a>
+          <a class="nav__menu-link" href="#">BLOG</a>
+          <a class="nav__menu-link" href="#">GALLERY</a>
+
+        </div>
+
+        <div class="nav__social">
+          <a class="nav__social-link fab fa-google" href=""></a>
+          <a class="nav__social-link fab fa-facebook-f" href=""></a>
+          <a class="nav__social-link fab fa-twitter" href=""></a>
+
+        </div>
+
+      </div>
+
+    </footer>
+
+
 
 
     <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
