--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="header__logo">
-        <img src="" alt="logo">
+        <img src="#" alt="logo">
       </div>
 
       <div class="header__menu">
@@ -39,7 +39,8 @@
 
     <footer class="footer">
       <div class="footer__contact">
-        <div class="contact__timetable">
+        <div class="contact__uoc">
+          <img src="./assets/images/logo.png" alt="logoUOC">
 
         </div>
 
