--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,9 @@
 
       <div class="header__menu">
         <a class="header__menu-link" href="#">HOME</a>
-        <a class="header__menu-link" href="#">MEMBERS</a>
-        <a class="header__menu-link" href="#">BLOG</a>
-        <a class="header__menu-link" href="#">GALLERY</a>
+        <a class="header__menu-link" href="members.html">MEMBERS</a>
+        <a class="header__menu-link" href="blog.html">BLOG</a>
+        <a class="header__menu-link" href="gallery.html">GALLERY</a>
       </div>
 
     </header>
@@ -29,7 +29,9 @@
         <h1 class="container__h1">TENNIS LEAGUE!</h1>
         <h2 class="container__h2">Join us on this Sport Event!</h2>
 
-        <button class="container__btn">READ MORE</button>
+        <button class="container__btn">
+          <a class="btn__a" href="blog.html">READ MORE</a>
+        </button>
         
 
       </section>
