--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <p class="container__p">Join us on this Sport Event!</p>
 
         <button class="container__btn">
-          <a class="btn__a" href="blog.html">READ MORE</a>
+          <a class="btn__a" href="contact.html">CONTACT</a>
         </button>
 
         <h2 class="container__h2">ORGANIZED BY:</h2>
