--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="header__menu">
-        <a class="header__menu-link" href="#">HOME</a>
+        <a class="header__menu-link header__menu-link--selected" href="#">HOME</a>
         <a class="header__menu-link" href="members.html">MEMBERS</a>
         <a class="header__menu-link" href="blog.html">BLOG</a>
         <a class="header__menu-link" href="contact.html">CONTACT</a>
@@ -43,7 +43,7 @@
             <div class="card-body">
               <!-- <h5 class="card-title">ORGANIZED BY:</h5> -->
               <p class="card-text">Ramon Estadella</p>
-              <a href="blog.html" class="btn btn-primary">READ MORE</a>
+              <!-- <a href="blog.html" class="btn btn-primary">READ MORE</a> -->
             </div>
           </div>
   
@@ -52,7 +52,7 @@
             <div class="card-body">
               <!-- <h5 class="card-title">ORGANIZED BY:</h5> -->
               <p class="card-text">Rafa Chávez</p>
-              <a href="blog.html" class="btn btn-primary">READ MORE</a>
+              <!-- <a href="blog.html" class="btn btn-primary">READ MORE</a> -->
             </div>
           </div>
 
