--- a/src/blog.html
+++ b/src/blog.html
@@ -15,14 +15,65 @@
 
         <div class="header__menu">
             <a class="header__menu-link" href="index.html">HOME</a>
-            <a class="header__menu-link" href="#">MEMBERS</a>
-            <a class="header__menu-link" href="blog.html">BLOG</a>
+            <a class="header__menu-link" href="members.html">MEMBERS</a>
+            <a class="header__menu-link header__menu-link--selected" href="#">BLOG</a>
             <a class="header__menu-link" href="contact.html">CONTACT</a>
         </div>
 
         </header>
 
         <main class="main__blog">
+
+            <h1 class="blog__h1">BLOG</h1>
+
+            <article class="blog__article">
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="./assets/images/moises-alex-WqI-PbYugn4-unsplash.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./assets/images/carles-rabada-AhnDPiEN8PI-unsplash.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="./assets/images/chino-rocha-2FKTyJqfWX8-unsplash.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <!-- <span class="sr-only">Previous</span> -->
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <!-- <span class="sr-only">Next</span> -->
+                    </a>
+                </div>
+
+            </article>
+
+            <p class="blog__p">Welcome to the exciting world of tennis! I am excited to share with you the passion that my friends have turned into a reality by creating their own tennis league. This project is not only a testament to their love of the sport, but also a vibrant space where players of all levels can compete, connect and enjoy the unique camaraderie that tennis offers. From intense matches to moments of pure fun, this league reflects the sporting spirit and dedication of those who have made it possible. Join us to experience the excitement of competition and share the joy of playing tennis together! 🎾✨</p>
+
+            <p class="blog__p">Let me introduce the visionaries behind this exciting tennis league: Ramon and Rafa. These two tennis professionals not only share a deep passion for the sport, but have also spent years teaching classes, passing on their experience and knowledge to a new generation of players. Their history in the world of competition is a true epic, with years of challenges, victories and unwavering dedication that has led them to become leaders in this sport. Their vision and commitment have given life to a league that transcends the ordinary, offering players of all levels a unique experience in the world of tennis.</p>
+
+            <figure class="blog__figure">
+                <img class="figure__img" src="./assets/images/prashant-gurung-5lA7dgpdHIg-unsplash.jpg" alt="Green Set">
+                <figcaption class="figure__figcap">You can play on Green Set.</figcaption>
+            </figure>
+
+            <p class="blog__p">Here, the passion for tennis combines with camaraderie and competitiveness in an inclusive environment for players of all ages. Our goal is to create a space where fun and learning intertwine. In our league, each player has the opportunity to face opponents of similar levels, ensuring exciting and fair matches. With a focus on fair play and mutual respect, we encourage sportsmanship and competitive spirit in every set. Join us and experience the excitement of tennis in a welcoming and energetic environment!</p>
+
+            <p class="blog__p">The Tennis Competition is underway, and we are excited to share the action-packed schedules we offer for all participants. From early mornings to late evenings, our flexible schedules allow players of all ages and levels to enjoy the thrill of competition. Additionally, for those who wish to immerse themselves in the game without having their own equipment, our club offers the facility of renting all the necessary tennis equipment. From quality rackets to fresh balls, we are here to ensure that all participants can focus on playing their best tennis without logistical worries. Come and join us to experience the excitement of competition and enjoy the passion of tennis!</p>
+
+            <figure class="blog__figure">
+                <img class="figure__img" src="./assets/images/valentin-balan-pbtwM_l6F9I-unsplash.jpg" alt="Clay Court tennis ">
+                <figcaption class="figure__figcap">You can play on Clay Court.</figcaption>
+            </figure>
 
         </main>
 
@@ -54,6 +105,9 @@
         </footer>
 
         <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
-
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    
     </body>
 </html>
