--- a/src/members.html
+++ b/src/members.html
@@ -15,7 +15,7 @@
 
         <div class="header__menu">
             <a class="header__menu-link" href="index.html">HOME</a>
-            <a class="header__menu-link" href="#">MEMBERS</a>
+            <a class="header__menu-link header__menu-link--selected" href="#">MEMBERS</a>
             <a class="header__menu-link" href="blog.html">BLOG</a>
             <a class="header__menu-link" href="contact.html">CONTACT</a>
         </div>
@@ -33,8 +33,13 @@
                         <figcaption class="card__figcap">
                             <h2 class="figcap__h2">David Taylor</h2>
                             <p class="figcap__p">David Taylor, 25 years old.</p>
+                            <p class="figcap__p">LEVEL:</p>
                         </figcaption>
                     </figure>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    </div>
                 </div>
 
                 <div class="members__card">
@@ -43,8 +48,13 @@
                         <figcaption class="card__figcap">
                             <h2 class="figcap__h2">Ramon Estadella</h2>
                             <p class="figcap__p">Ramon Estadella, 26 years old.</p>
+                            <p class="figcap__p">LEVEL:</p>
                         </figcaption>
                     </figure>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                    </div>
                 </div>
 
                 <div class="members__card">
@@ -53,8 +63,13 @@
                         <figcaption class="card__figcap">
                             <h2 class="figcap__h2">Jennifer López</h2>
                             <p class="figcap__p">Jennifer López, 20 years old.</p>
+                            <p class="figcap__p">LEVEL:</p>
                         </figcaption>
                     </figure>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
+                    </div>
                 </div>
 
                 <div class="members__card">
@@ -63,8 +78,13 @@
                         <figcaption class="card__figcap">
                             <h2 class="figcap__h2">Sara Manson</h2>
                             <p class="figcap__p">Sara Manson, 30 years old.</p>
+                            <p class="figcap__p">LEVEL:</p>
                         </figcaption>
                     </figure>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                    </div>
                 </div>
 
                 <div class="members__card">
@@ -73,8 +93,13 @@
                         <figcaption class="card__figcap">
                             <h2 class="figcap__h2">Rafa Chávez</h2>
                             <p class="figcap__p">Rafa Chávez, 19 years old.</p>
+                            <p class="figcap__p">LEVEL:</p>
                         </figcaption>
                     </figure>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 85%"></div>
+                    </div>
                 </div>
 
                 <div class="members__card">
@@ -83,11 +108,18 @@
                         <figcaption class="card__figcap">
                             <h2 class="figcap__h2">Glòria Estadella</h2>
                             <p class="figcap__p">Glòria Estadella, 25 years old.</p>
+                            <p class="figcap__p">LEVEL:</p>
                         </figcaption>
                     </figure>
+
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 72%"></div>
+                    </div>
                 </div>
 
             </div>
+
+            
 
         </main>
 
