web no-responsive done

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <a class="header__menu-link header__menu-link--selected" href="#">HOME</a>
         <a class="header__menu-link" href="members.html">MEMBERS</a>
         <a class="header__menu-link" href="blog.html">BLOG</a>
-        <a class="header__menu-link" href="contact.html">CONTACT</a>
+        <a class="header__menu-link" href="sponsor.html">SPONSOR</a>
       </div>
 
     </header>
@@ -30,8 +30,8 @@
 
         <p class="container__p">Join us on this Sport Event!</p>
 
-        <button class="container__btn">
-          <a class="btn__a" href="contact.html">CONTACT</a>
+        <button type="button" class="container__btn" data-toggle="button" aria-pressed="false" autocomplete="off">
+          SPONSOR!
         </button>
 
         <h2 class="container__h2">ORGANIZED BY:</h2>
