--- a/src/blog.html
+++ b/src/blog.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-        <title>HOME</title>
+        <title>BLOG</title>
     </head>
     <body>
         <header class="header">
@@ -17,7 +17,7 @@
             <a class="header__menu-link" href="index.html">HOME</a>
             <a class="header__menu-link" href="members.html">MEMBERS</a>
             <a class="header__menu-link header__menu-link--selected" href="#">BLOG</a>
-            <a class="header__menu-link" href="contact.html">CONTACT</a>
+            <a class="header__menu-link" href="sponsor.html">SPONSOR</a>
         </div>
 
         </header>
