--- a/src/sponsor.html
+++ b/src/sponsor.html
@@ -30,7 +30,7 @@
             <p class="contact__p">In this section, we present our SPONSORS. You can look for sponsors for the tennis competition or you can have your company or brand sponsor this space! Thank you so much!</p>
 
             <button type="button" class="btn btn-primary btn-lg btn-block">Sponsor US!</button>
-            <button type="button" class="btn btn-secondary btn-lg btn-block">Sponsors ME!</button>
+            <button type="button" class="btn btn-secondary btn-lg btn-block">Sponsor YOURSELF!</button>
 
         </main>
 
